# findr

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  docker-compose.yml
.github/workflows/: validate.yml
apps/findr-api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/findr-api/app/: auth.py  config.py  logs.py  main.py  models.py  providers.py  search.py  storage.py
apps/findr-liferay-client-extension/: .env.example  Dockerfile  README.md  client-extension.yaml  index.html  package-lock.json  package.json  vite.config.ts
apps/findr-liferay-client-extension/src/: App.tsx  api.ts  index.tsx  types.ts
apps/findr-web/: .env.example  README.md  package-lock.json  package.json
apps/findr-web/src/: App.css  App.tsx  api.ts  index.tsx  types.ts
autonomyx-finder/: SKILL.md
autonomyx-finder/agents/: openai.yaml
autonomyx-finder/assets/: output-schema.json  surrealdb-template.surql
autonomyx-finder/evals/: evals.json
autonomyx-finder/examples/: entity-resolution-sample.json  identity-fabric-sample.json  local-risk-signal-sample.json
autonomyx-finder/references/: examples.md  global-taxonomies.md  notifications.md  output.md  routing.md  runtime.md  schema-mapping.md  surrealdb.md  taxonomy.md  tooling.md  traces.md  user-guide.md
docs/: blog-autonomyx-finder-launch.md  credentials.md  how-to-use.md  summary.md
docs/liferay/: api-contract.md  auth-proxy.md  data-model.md  deployment-topology.md  page-map.md
